# SimEvaluator

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: crimpability_radial_force.yaml  crimpability_radial_force_local.yaml  study_template.yaml
src/exp_sim_compare/: __init__.py  alignment.py  branches.py  channels.py  cli.py  config.py  interpolation.py  loaders.py  metrics.py  outliers.py  pipeline.py  plotting.py  ranking.py  reports.py
studies/crimpability_radial_force/: .gitignore  config.yaml
tests/: test_branch_split.py  test_config_paths.py  test_interpolation.py  test_metrics.py  test_outliers.py  test_ranking.py  test_selected_plotting.py
